# millrace

./: .gitignore  ADVISOR.md  CHANGELOG.md  MANIFEST.in  OPERATOR_GUIDE.md  README.md  ROADMAP.md  SENTINEL.md  SUPERVISOR.md  TUI_DOCUMENTATION.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  repo-guardrails.yml
docs/: OPERATOR_GUIDE.md  REPO_GUARDRAILS.md  RUNTIME_DEEP_DIVE.md  TUI_DOCUMENTATION.md  millrace-technical-overview.md  source-package-map.md
docs/adr/: 0001-adopt-src-layout-and-domain-packages.md  0002-runtime-engine-decomposition.md  0003-error-taxonomy-and-public-boundaries.md  0004-release-verification-contract.md  0005-compiled-graph-plan-as-runtime-authority.md  0006-explicit-workspace-baselines-and-managed-upgrades.md  0007-runtime-internal-authority-packages.md  0008-contract-facade-and-domain-contract-modules.md  0009-stage-metadata-single-source-of-truth.md
docs/runtime/: README.md  control-plane-command-surface-and-mailbox-semantics.md  millrace-arbiter-and-completion-behavior.md  millrace-cli-reference.md  millrace-compiler-and-frozen-plans.md  millrace-entrypoint-mapping.md  millrace-loop-authoring.md  millrace-modes-and-loops.md  millrace-runner-architecture.md  millrace-runtime-architecture.md  millrace-runtime-error-codes.md  millrace-runtime-lifecycle-diagram.md  millrace-usage-governance.md  millrace-workspace-baselines-and-upgrades.md
docs/skills/: README.md  millrace-loop-authoring.md
millrace_ai/: compiler.py  config.py  contracts.py  doctor.py  mailbox.py  modes.py  runtime.py  runtime_lock.py  state_store.py  work_documents.py
millrace_ai/runners/: base.py  contracts.py  process.py  registry.py
millrace_engine/: __init__.py  __main__.py  baseline_assets.py  cli.py  cli_rendering.py  compiler.py  compiler_artifacts.py  compiler_models.py  compiler_rebinding.py  compiler_rendering.py  config.py  config_compat.py  config_runtime.py  context_facts.py  contract_compounding.py  contract_context_facts.py  contract_core.py  contract_documents.py  contract_harness.py  contract_lab.py  contract_runtime.py  contracts.py  control.py  control_actions.py  control_common.py  control_compounding_surface.py  control_compounding_views.py  control_interview.py  control_models.py  control_mutation_surface.py  control_mutations.py  control_publish.py  control_queue_config_surface.py  control_reports.py  control_runtime_surface.py  control_sentinel_surface.py  diagnostics.py  engine.py  engine_config_coordinator.py  engine_mailbox_command_handlers.py  (+39 more)
millrace_engine/adapters/: __init__.py  control_mailbox.py  file_watcher.py
millrace_engine/assets/: ADVISOR.md  OPERATOR_GUIDE.md  README.md  RUNTIME_DEEP_DIVE.md  SENTINEL.md  __init__.py  manifest.json  millrace.toml  resolver.py
millrace_engine/compounding/: __init__.py  extraction.py  finalization.py  harness.py  integrity.py  lifecycle.py  orientation.py  retrieval.py
millrace_engine/lab/: __init__.py  harness.py
tests/: __init__.py  conftest.py  provenance_support.py  support.py  support_shadow_mode.py  test_asset_resolver.py  test_baseline_assets.py  test_clean_promotion_workflow_contract.py  test_cli.py  test_compiler.py  test_compounding_closeout.py  test_compounding_integrity.py  test_compounding_orientation.py  test_config.py  test_context_fact_store.py  test_contracts.py  test_control.py  test_cross_domain_operational_parity.py  test_doctor.py  test_draft_alignment.py  test_e2e_handoffs.py  test_engine_config_coordinator.py  test_engine_mailbox_processor.py  test_engine_runtime_loop.py  test_entrypoints.py  test_events.py  test_execution_plane.py  test_execution_prompt_contracts.py  test_file_watcher.py  test_goalspec_contractor.py  test_goalspec_contracts.py  test_goalspec_objective_profile_sync.py  test_goalspec_product_planning.py  test_goalspec_semantic_profile.py  test_goalspec_state.py  test_health.py  test_import_cycles.py  test_lab_harness.py  test_loop_architecture.py  test_mailbox.py  (+44 more)
tools/: guardrail_lint_excluded_paths.txt  guardrail_typecheck_surface.txt  repo_guardrails.py  repo_guardrails.toml
(+720 files in other folders)
