[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "millrace-ai"
dynamic = ["version"]
description = "Python runtime engine for the Millrace v1 control plane"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2,<3",
  "textual>=8,<9",
  "tomlkit>=0.13,<1",
  "typer>=0.12,<1",
  "watchdog>=4,<7",
]

[project.scripts]
millrace = "millrace_engine.cli:main"

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2",
  "pytest>=8,<9",
  "pytest-textual-snapshot>=1,<2",
  "ruff>=0.11,<1",
]

[tool.setuptools.dynamic]
version = {attr = "millrace_engine.__version__"}

[tool.setuptools.packages.find]
include = ["millrace_engine*"]
exclude = ["millrace_engine.legacy*"]

[tool.setuptools.package-data]
"millrace_engine.assets" = [
  "manifest.json",
  "*.md",
  "docs/**/*.md",
  "*.toml",
  "agents/*.log",
  "agents/**/*.log",
  "agents/**/*.json",
  "agents/**/*.md",
  "agents/**/*.ps1",
  "agents/**/*.py",
  "agents/**/*.sh",
  "agents/**/*.yaml",
  "agents/**/*.yml",
  "registry/**/*.json",
  "registry/**/*.md",
]
"millrace_engine.tui" = [
  "styles/*.tcss",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["build"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
exclude = "(^build/|^clean/)"
