[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "millrace-ai"
dynamic = ["version"]
description = "Millrace runtime rewrite baseline package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2,<3",
  "textual>=8,<9",
  "tomlkit>=0.13,<1",
  "typer>=0.12,<1",
  "watchdog>=4,<7",
]

[project.scripts]
millrace = "millrace_ai.cli:main"

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2",
  "pytest>=8,<9",
  "pytest-textual-snapshot>=1,<2",
  "ruff>=0.11,<1",
]

[tool.setuptools.dynamic]
version = {attr = "millrace_ai.__version__"}

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["millrace_ai", "millrace_ai.*"]

[tool.setuptools.package-data]
millrace_ai = ["assets/**/*.md", "assets/**/*.json"]

[tool.setuptools.exclude-package-data]
"*" = [".DS_Store"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 130
target-version = "py311"
extend-exclude = ["build"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
exclude = "(^build/|^clean/)"
